@@ -1,3 +1,8 @@
+Tue Jun 29 12:29:25 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/tests/ContentFilteredTopic/Deployments/run_test.pl:
+          Using the -q option on the plan launcher
+
 Tue Jun 29 12:06:24 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * DAnCE/Plan_Launcher/Plan_Launcher.cpp:
